scss/partials/_home_page.scss
$illustration_min_width: 1247;

button.get-started-button {
  max-width: 320px;
  height: 48px;
  border-radius: 8px;
  background-color: $carrot_text_blue;
  color: white;
  padding: 3px 56px;
  @include avenir_H();
  font-size: 18px;
  margin: 20px 16px 0;
  opacity: 0.9;

  &:hover {
    opacity: 1;
  }
}

div#wrap {

  div.main.home-page {
    width: 100%;

    @include big_web(){
      background-image: cdnUrl("/img/ML/home_page_swoosh.svg");
      background-position: 0px -159px;
      background-size: 100% auto;
      background-repeat: no-repeat;
    }
  

    div.cta {
      padding-top: 116px;
      padding-bottom: 50px;
      text-align: center;

      @include mobile(){
        padding-top: 46px;
      }

      h1.headline {
        font-size: 48px;
        @include avenir_B();
        color: $carrot_dark_blue;
        padding: 0 16px;
        max-width: 800px;
        margin: 0 auto 20px;
        line-height: 60px;

        @include mobile() {
          font-size: 32px;
          line-height: 45px;
        }
      }

      div.subheadline {
        color: #4D4D4D;
        font-size: 24px;
        padding: 0 16px;
        @include avenir_R();
        line-height: 32px;
        max-width: 650px;
        margin: 20px auto 0px;

        &.second-line {
          margin: 0px auto 40px;

          @include mobile(){
            margin-top: 20px;
          }
        }
      }

      div.small-teams {
        color: $carrot_dark_blue;
        font-size: 14px;
        @include avenir_H();
        margin-top: 16px;
      }

      div.homepage-screenshot {
        background-repeat: no-repeat;
        background-position: center;
        background-size: 756px 511px;
        @include image-2x("/img/ML/home_page_screenshot");
        width: 756px;
        height: 511px;
        margin: 48px auto 0px;
        padding: 0 16px;
      }
    }

    div.illustrations {
      text-align: center;
      padding-bottom: 80px;

      div.illustration {
        margin: 60px auto;
        padding: 0 16px;

        @media screen and (min-width: #{$illustration_min_width}px){
          width: #{$illustration_min_width}px;
        }

        @media screen and (max-width: #{$illustration_min_width - 1}px){
          img {
            max-width: 100%;
            height: auto;
          }
        }

        div.description {
          @media screen and (max-width: #{$illustration_min_width - 1}px){
            margin-top: 60px;
            padding: 0 16px;
            max-width: 500px;
            margin: 60px auto 0;
          }

          @media screen and (min-width: #{$illustration_min_width}px){
            max-width: 475px;
          }

          div.illustration-image {
            background-repeat: no-repeat;
            background-position: center;
          }

          div.title {
            color: $carrot_dark_blue;
            @include avenir_H();
            font-size: 36px;
            letter-spacing: 0.1px;
            text-align: left;
          }

          div.subtitle {
            color: $carrot_dark_blue;
            @include avenir_M();
            font-size: 20px;
            line-height: 1.7;
            text-align: left;

            a {
              color: #4C67FC;
              &:hover {
                text-decoration: underline;
              }
            }
          }
        }

        // 1st illustration
        @media screen and (min-width: #{$illustration_min_width}px){
          &.illustration-1 {

            div.illustration-image {
              float: left;
              width: 572px;
              height: 438px;
              background-size: 572px 438px;
              @include image-2x("/img/ML/home_page_il_1_572_438");
              margin-left: 40px;
            }

            div.description {
              float: right;
              text-align: left;
              margin-top: 90px;
              margin-right: 50px;
            }
          }

          // 2nd illustration
          &.illustration-2 {

            div.illustration-image {
              float: right;
              width: 521px;
              height: 385px;
              background-size: 521px 385px;
              @include image-2x("/img/ML/home_page_il_2_521_385");
            }

            div.description {
              float: left;
              text-align: right;
              margin-top: 90px;
            }
          }

          // 3rd illustration
          &.illustration-3 {
            div.illustration-image {
              float: left;
              width: 430px;
              height: 329px;
              background-size: 430px 329px;
              @include image-2x("/img/ML/home_page_il_3_430_329");
              margin-left: 90px
            }

            div.description {
              float: right;
              text-align: left;
              margin-top: 45px;
              margin-right: 50px;
            }
          }

          &.illustration-4 {
            div.illustration-image {
              float: right;
              width: 521px;
              height: 283px;
              background-size: 521px 283px;
              @include image-2x("/img/ML/home_page_il_4_521_283");
            }

            div.description {
              float: left;
              text-align: left;
              margin-left: 50px;
              margin-top: 70px;
              max-width: 455px;
            }
          }

          &.illustration-5 {
            div.illustration-image {
              float: left;
              width: 424px;
              height: 329px;
              background-size: 424px 329px;
              @include image-2x("/img/ML/home_page_il_5_424_329");
              margin-left: 70px;
            }

            div.description {
              float: right;
              text-align: left;
              margin-top: 70px;
              margin-right: 50px;
            }
          }

          &.illustration-6 {
            margin-top: 20px;
            div.illustration-image {
              float: right;
              width: 346px;
              height: 321px;
              background-size: 346px 321px;
              @include image-2x("/img/ML/home_page_il_6_346_321");
              margin-right: 200px;
            }

            div.description {
              float: left;
              text-align: left;
              margin-left: 20px;
              margin-top: 90px;
            }
          }

          &.illustration-7 {
            div.illustration-image {
              float: left;
              width: 333px;
              height: 274px;
              background-size: 333px 274px;
              @include image-2x("/img/ML/home_page_il_7_333_274");
              margin-left: 50px;
            }

            div.description {
              float: right;
              text-align: left;
              margin-right: 40px;
              margin-top: 20px;
            }
          }
        }
      }
    }

    div.home-section {
      padding: 120px 0px;

      div.illustrations-title {
        margin-bottom: 60px;
        max-width: 720px;
        text-align: center;
        margin: 0 auto;

        div.why-carrot {
          @include avenir_H();
          font-size: 48px;
          color: $carrot_dark_blue;
          margin-bottom: 24px;
        }

        div.why-carrot-description {
          @include avenir_R();
          font-size: 20px;
          color: #4D4D4D;
        }
      }
    }

    div.second-section {
      background-color: $oc_gray_8;
      padding: 120px 0px 0px;
    }

    div.third-section {
      div.illustrations-title {
        max-width: 810px;
        
        div.centred-screenshot {
          width: 471px;
          height: 319px;
          margin: 64px auto;
          background-size: 471px 319px;
          background-repeat: no-repeat;
          background-position: center;
          @include image-2x("/img/ML/home_page_screenshot");
        }
      }

      div.third-section-footer {
        max-width: 1074px;
        margin: 60px auto;

        div.left-copy {
          float: left;
          width: 489px;
        }

        div.right-copy {
          float: right;
          width: 489px;
        }

        div.title {
          color: $carrot_dark_blue;
          @include avenir_H();
          font-size: 36px;
          letter-spacing: 0.1px;
          text-align: left;
        }

        div.description {
          color: #3B3D41;
          @include avenir_M();
          font-size: 20px;
          line-height: 1.7;
          text-align: left;
        }
      }
    }

    div.customers {
      width: 100%;
      margin: 50px auto 0;
      background-color: $carrot_dark_blue;
      padding: 60px 0;
      text-align: center;

      div.customers-title {
        padding: 0 16px;
        font-size: 36px;
        @include avenir_H();
        color: white;

        @include mobile() {
          font-size: 28px;
        }

        img {
          width: 40px;
          height: 40px;
          margin-right: 20px;
          margin-top: -4px;

          @include mobile() {
            display: none;
          }
        }
      }

      div.customers-cards {
        margin: 60px auto;
        width: 1246px;

        div.left-arrow {
          height: 200px;
          width: 48px;
          float: left;

          @include mobile(){
            display: none;
          }

          button {
            margin-top: 50px;
            background-image: cdnUrl("/img/ML/home_page_left_arrow.png");
            background-size: 48px 96px;
            width: 48px;
            height: 96px;
            opacity: 0.9;

            &:hover {
              opacity: 1;
            }

            &:disabled {
              opacity: 0.4;
            }
          }
        }

        div.customers-cards-scroll {
          width: 1110px;
          height: 200px;
          overflow-x: hidden;
          overflow-y: hidden;
          margin: 0 20px;
          float: left;
          display: inline-block;

          div.customers-card {
            margin-right: 15px;
            width: 360px;
            height: 200px;
            border-radius: 10px;
            background-color: white;
            box-shadow: 0 1px 2px 0 rgba(145, 145, 145, 0.5);
            float: left;

            &:last-child {
              margin-right: 0px;
            }
          }
        }

        div.right-arrow {
          height: 200px;
          width: 48px;
          float: right;

          @include mobile(){
            display: none;
          }

          button {
            margin-top: 50px;
            background-image: cdnUrl("/img/ML/home_page_right_arrow.png");
            background-size: 48px 96px;
            width: 48px;
            height: 96px;
            opacity: 0.9;

            &:hover {
              opacity: 1;
            }

            &:disabled {
              opacity: 0.4;
            }
          }
        }
      }
    }

    div.try-it {
      width: 100%;
      margin: 0 auto;
      padding: 56px 0 86px;
      background-image: linear-gradient(252deg, #f7c144, #f2558f);
      text-align: center;

      button.get-started-button {
        border: none;
        outline: none;
        background-color: #2E405A;
      }

      div.try-it-title {
        @include avenir_H();
        font-size: 36px;
        letter-spacing: 0.1px;
        color: white;
      }

      div.try-it-subtitle {
        color: #592121;
        @include avenir_H();
        font-size: 16px;
        line-height: 1.75;
      }

      div.try-it-combo-field button.try-it-get-started {
        background-color: $carrot_dark_blue;
      }

      div.carrot-box-container {
        color: #592121 !important;
        padding: 0;

        div.thanks-headline {
          color: white !important;
        }
      }
    }
  }
}

